@@ -10,9 +10,10 @@
     "base",
     "angelsbioprocessing",
     "angelsrefining",
-    "angelspetrochem",
+	"angelspetrochem >= 0.9.16",
     "bobelectronics",
     "boblogistics",
+	"angelssmelting >= 0.6.13",
     "? KS_Power",
     "? A Sea Block Config",
     "? LandfillPainting",
