@@ -3,6 +3,10 @@ Version: 0.1.0
 Date: 23.11.2020
   Changes:
     - Forked Sea Block
+  Bugfixes:
+    - Fixed missing icon "liquid-multi-phase-oil.png"
+    - Removed coal and crushed coal
+    - Moved recipes for Sulfur and Sulfur dioxide gas back to Sulfur processing 1
 ---------------------------------------------------------------------------------------------------
 Version: 0.4.8
 Date: 18. 8. 2020
